solution to problem 46

--- a/meson.build
+++ b/meson.build
@@ -4,5 +4,6 @@ project(
     default_options: ['cpp_std=c++20']
 )
 
-executable('problem044', sources: 'src/problem044.cpp')
-executable('problem045', sources: 'src/problem045.cpp')
+executable('problem044', 'src/problem044.cpp')
+executable('problem045', 'src/problem045.cpp')
+executable('problem046', 'src/problem046.cpp')
