--- a/meson.build
+++ b/meson.build
@@ -7,3 +7,4 @@ project(
 executable('problem044', 'src/problem044.cpp')
 executable('problem045', 'src/problem045.cpp')
 executable('problem046', 'src/problem046.cpp')
+executable('problem047', 'src/problem047.cpp')
