--- a/meson.build
+++ b/meson.build
@@ -8,3 +8,4 @@ executable('problem044', 'src/problem044.cpp')
 executable('problem045', 'src/problem045.cpp')
 executable('problem046', 'src/problem046.cpp')
 executable('problem047', 'src/problem047.cpp')
+executable('problem048', 'src/problem048.cpp')
