--- a/meson.build
+++ b/meson.build
@@ -9,3 +9,4 @@ executable('problem045', 'src/problem045.cpp')
 executable('problem046', 'src/problem046.cpp')
 executable('problem047', 'src/problem047.cpp')
 executable('problem048', 'src/problem048.cpp')
+executable('problem049', 'src/problem049.cpp')
