--- a/meson.build
+++ b/meson.build
@@ -10,3 +10,4 @@ executable('problem046', 'src/problem046.cpp')
 executable('problem047', 'src/problem047.cpp')
 executable('problem048', 'src/problem048.cpp')
 executable('problem049', 'src/problem049.cpp')
+executable('problem050', 'src/problem050.cpp')
