--- a/meson.build
+++ b/meson.build
@@ -11,3 +11,4 @@ executable('problem047', 'src/problem047.cpp')
 executable('problem048', 'src/problem048.cpp')
 executable('problem049', 'src/problem049.cpp')
 executable('problem050', 'src/problem050.cpp')
+executable('problem051', 'src/problem051.cpp')
